--- a/src/main/UI/src/app/app.component.html
+++ b/src/main/UI/src/app/app.component.html
@@ -5,6 +5,8 @@
     <div class="hgroup">
       <h1>Landon Hotel</h1>
       <h2>London, Ontario</h2>
+      <h1>{{ welcomeMessageEn }}</h1>
+      <h1>{{ welcomeMessageFr }}</h1>
       <p><a href="/#welcome"><img src="assets/images/arrow.png" alt="down arrow"></a></p>
     </div>
   </article>
@@ -23,7 +25,7 @@
   <div class="scene" id="welcome">
     <article class="content">
 
- 
+
 
       <div class="row">
         <div class=""col-12>
@@ -58,7 +60,7 @@
               </div>
               </form>
 
-        
+
         </div>
       </div>
 
